--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <form id="form">
             <h1>
-                Descomponer
+                Descompose
             </h1>
             <input type="number" id="input" placeholder="Type Number" autocomplete="off">
             <Button type="submit" id="btn" class="btn">Calculate</Button>
